// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fznXWL eRgJcq"
>
  <li
    className="sc-fzokvW dzXeqN"
    onClick={[Function]}
  >
    <span
      className="sc-fzoYHE MHxDr"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fzokvW dzXeqN"
    onClick={[Function]}
  >
    <span
      className="sc-fzoYHE MHxDr"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fzokvW dzXeqN"
    onClick={[Function]}
  >
    <span
      className="sc-fzoYHE MHxDr"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;

exports[`Inline Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fznXWL eRgJcq"
>
  <li
    className="sc-fzokvW jVnqkB"
    onClick={[Function]}
  >
    <span
      className="sc-fzoYHE MHxDr"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fzokvW jVnqkB"
    onClick={[Function]}
  >
    <span
      className="sc-fzoYHE MHxDr"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fzokvW jVnqkB"
    onClick={[Function]}
  >
    <span
      className="sc-fzoYHE MHxDr"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;
